--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "cd client && npm run build && cd ../backend && node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vaishnav",
   "license": "MIT",
   "dependencies": {
     "concurrently": "^4.0.1",
